# Django-service-tree-menu

./: .env.example  README.md  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
tree_menu/: Dockerfile  entrypoint.sh  manage.py
tree_menu/menu_app/: admin.py  models.py  urls.py  views.py
tree_menu/menu_app/management/commands/: load_data_bd.py
tree_menu/menu_app/migrations/: 0001_initial.py
tree_menu/menu_app/templatetags/: custom_tags.py
tree_menu/templates/: base.html
tree_menu/templates/includes/: footer.html  header.html
tree_menu/templates/menu_app/: 404.html  index.html  menu.html
tree_menu/tree_menu/: settings.py  urls.py
